<resources>
    <string name="app_name">Hobby Cost Tracker</string>

    <!-- Login -->
    <string name="title_login">Login</string>
    <string name="hint_email">Email or Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Log In</string>
    <string name="btn_create_account">Create Account</string>

    <!-- Home -->
    <string name="title_home">My Hobbies</string>
    <string name="btn_add_hobby">Add Hobby</string>
    <string name="btn_account">Account</string>
    <string name="label_total_spent">Spent:</string>
    <string name="label_total_earned">Earned:</string>
    <string name="label_net">Net:</string>

    <!-- Add Hobby -->
    <string name="title_add_hobby">Add Hobby</string>
    <string name="hint_hobby_name">Hobby Name</string>
    <string name="btn_save_hobby">Save Hobby</string>
    <string name="btn_cancel">Cancel</string>

    <!-- Add Transaction -->
    <string name="title_add_transaction">Add Cost / Revenue</string>
    <string name="label_type">Type</string>
    <string name="type_cost">Cost</string>
    <string name="type_revenue">Revenue</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_note">Note (optional)</string>
    <string name="btn_save_entry">Save Entry</string>

    <!-- Account -->
    <string name="title_account">Account</string>
    <string name="label_account_email">Email:</string>
    <string name="btn_logout">Log Out</string>
</resources>
