<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/txtAddTransactionTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_add_transaction"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtSelectedHobbyName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Selected Hobby: (placeholder)"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/txtAddTransactionTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/txtTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_type"
        app:layout_constraintTop_toBottomOf="@id/txtSelectedHobbyName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="18dp"/>

    <RadioGroup
        android:id="@+id/rgType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/txtTypeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_cost"/>

        <RadioButton
            android:id="@+id/radRevenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_revenue"
            android:layout_marginStart="18dp"/>
    </RadioGroup>

    <EditText
        android:id="@+id/edtAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_amount"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/rgType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/edtNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_note"
        android:inputType="textMultiLine"
        android:minLines="3"
        app:layout_constraintTop_toBottomOf="@id/edtAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/btnSaveEntry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_entry"
        app:layout_constraintTop_toBottomOf="@id/edtNote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnCancelEntry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        app:layout_constraintTop_toBottomOf="@id/btnSaveEntry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
