<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/txtAddHobbyTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_add_hobby"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edtHobbyName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_hobby_name"
        app:layout_constraintTop_toBottomOf="@id/txtAddHobbyTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnSaveHobby"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_hobby"
        app:layout_constraintTop_toBottomOf="@id/edtHobbyName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnCancelHobby"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        app:layout_constraintTop_toBottomOf="@id/btnSaveHobby"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
