<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/txtAccountTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_account"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtAccountEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_account_email"
        app:layout_constraintTop_toBottomOf="@id/txtAccountTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/txtAccountEmailValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="(placeholder@email.com)"
        app:layout_constraintTop_toBottomOf="@id/txtAccountTitle"
        app:layout_constraintStart_toEndOf="@id/txtAccountEmailLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
